[package]
name = "cold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
dashmap = { version = "5.5.0", features = ["rayon"] }
log = "0.4.20"
memmap2 = "0.7.1"
object = { version = "0.32.0", features = ["write"] }
rayon = "1.7.0"
simplelog = "0.12.1"
